# bot_discord_supabase

./: .env  .env.example.bak  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CONFIG_README.md  FILES_CREATED.md  OPTIMIZATION_GUIDE.md  OPTIMIZATION_SUMMARY.md  QWEN.md  README.md  READY_TO_APPLY.md  apply_optimizations.sh  check_optimization_status.sql  check_status.py  config.example.yaml  main.py  pyproject.toml  run.sh  start_bot.sh  stop_bot.sh  test_pdf_loader.py  test_rag_pipeline.py
.agent/rules/: python-pro.md
.agent/workflows/: python-pro.md
.claude/agents/: ai-engineer.md
.github/workflows/: bot-pipeline.yml
data/: README.md
data/process_penal/: atribuicoes_da_policia_lei_10446.md  concede_indulto_natalino_e_comutacao_de_penas_dec._9246.md  cpp_atualiz._22_de_julho.docx  cpp_atualiz._22_de_julho.md  cpp_militar.docx  cpp_militar.md  detetive_particular_lei_13.432.md  diretrizes_basicas_para_arquitetura_penal.md  estatuto_da_seguranca_privada_e_da_seguranca_das_instituicoes_financeiras_lei_14967.md  estende_aos_func._policia_civil_dos_estados_e_territorios_fed._ocup._de_cargos_da_ativ._policial_prisao_especial_lei_5350.md  forca_nacional_de_seguranca_publica_dec._5289.md  fundo_penitenciario_nacional_lc_79.md  identificacao_criminal_do_civilmente_identificado_lei_12.037.docx  (+30 more)
legacy/: index.js  ingest.js  package-lock.json  package.json  test-connection.js
scripts/: auto_ask_tester.py  log_watch.py  sanitize_markdown.py  test_db_connection.py
src/: bot.py  dashboard.py  db_stats.py  ingest.py
supabase/: README.md  config.toml  schema.sql  seed.sql
(+43 files in other folders)
