[project]
name = "bot-discord-supabase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cmake>=4.2.0",
    "discord-py>=2.6.4",
    "openai>=2.8.1",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "pypdf>=3.0.0",
    "streamlit>=1.51.0",
    "supabase>=2.24.0",
    "docling>=2.63.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "pytest-asyncio>=1.3.0",
]
